--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,8 @@
 buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.2.2'
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.7.6'
+        classpath 'com.google.gms:google-services:4.4.0'
     }
 }
 
